modified:   chinese/.DS_Store modified:   chinese/About.html modified:   chinese/events.html modified:   chinese/home.html new file:   chinese/jogano.css modified:   chinese/products.html modified:   jogano.css modified:   product/24.html modified:   product/jogano.css modified:   products.html

--- a/chinese/About.html
+++ b/chinese/About.html
@@ -24,7 +24,7 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/About.html" class="en lang">En</a>
       <div class="gang lang">|</div>
       <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang">中文</a>
 </div>
@@ -39,7 +39,7 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/About.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
