--- a/chinese/products.html
+++ b/chinese/products.html
@@ -25,7 +25,7 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about navi"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang">En</a>
+      <a href="https://wangx733.github.io/jogano/products.html" class="en lang">En</a>
       <div class="gang lang">|</div>
       <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang">中文</a>
 </div>
@@ -40,7 +40,7 @@
 
       <a href="https://wangx733.github.io/jogano/About.html" class="about navi2 lang2"> 关于我们
       </a>
-      <a href="https://wangx733.github.io/jogano/jogano.html" class="en lang2">En</a>
+      <a href="https://wangx733.github.io/jogano/products.html" class="en lang2">En</a>
       <div class="gang lang2">|</div>
       <a href="https://wangx733.github.io/jogano/chinese/product.html" class="cn lang2">中文</a>
       <div class="naviline2"></div>
@@ -185,7 +185,7 @@
 
  <label>
           <input type="checkbox" value="loire">
-          <span class="checkboxParts">Loire valley</span>
+          <span class="checkboxParts">卢瓦尔</span>
         </label>
 
 
@@ -210,286 +210,287 @@
 
 
 
+
 <div class="box">
 
 
 
 
 
-<a data-filter-key="white" href="https://wangx733.github.io/jogano/product/1.html" class="items red" data-filter-key="red" data-filter-price="p0">
+<a data-filter-key="white" href="https://wangx733.github.io/jogano/product/1.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
 <div class="redwine"></div>
 <div class="pricee">¥ 99</div>
 <img src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png" class="image" >
-<h1>BACHEVILLAIN </h1>
+<h1>龙船王</h1>
 <div class="introo">
   <h3>13.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
 
 
-<a href="https://wangx733.github.io/jogano/product/2.html" class="items red" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/2.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
 <div class="redwine"></div>
 <div class="pricee">¥ 88</div>
 <img src="https://wangx733.github.io/jogano/1-products/2-lostpara.png" class="image" >
-<h1>Lost Paradise </h1>
+<h1>卢瑟天堂</h1>
 <div class="introo">
-  <h3>13.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
 
 
-<a href="https://wangx733.github.io/jogano/product/4.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/4.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full">
   <div class="redwine"></div>
 <div class="pricee">¥ 358</div>
 <img src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png" class="image" >
-<h1>Chateau Du Tailhas  </h1>
+<h1>泰好 </h1>
 <div class="introo">
-  <h3>13.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/7.html" class="items" data-filter-key="white" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/7.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="loire" >
   <div class="redwine"></div>
 <div class="pricee">¥ 256</div>
 <img src="https://wangx733.github.io/jogano/1-products/7-cuveeflamme.png" class="image" >
-<h1>Cuvée Flamme Brut  </h1>
+<h1>法拉陈酿干白起泡酒 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">14.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/8.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/8.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="loire">
   <div class="redwine"></div>
 <div class="pricee">¥ 256</div>
 <img src="https://wangx733.github.io/jogano/1-products/8-flamme-rose.png" class="image" >
-<h1>Cuvée Flamme Rosé  </h1>
+<h1>法拉桃红起泡酒</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">12.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>卢瓦尔</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/9.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/9.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="cahors" data-filter-body="full">
   <div class="redwine"></div>
 <div class="pricee">¥ 369</div>
 <img src="https://wangx733.github.io/jogano/1-products/9-haute.png" class="image" >
-<h1>CCH. DE Haut Serre  </h1>
+<h1>大御龙 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>Cahors</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/10.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/10.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 208</div>
 <img src="https://wangx733.github.io/jogano/1-products/10-gouleyant.png" class="image" >
-<h1>Ch.Gouleyant  </h1>
+<h1>古龙</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>卡尔</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/11.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/11.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 288</div>
 <img src="https://wangx733.github.io/jogano/1-products/11-laffeur.png" class="image" >
-<h1>Ch.Lafleaur Haut Serre </h1>
+<h1>小御龙</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>卡尔</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/49.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 246</div>
 <img src="https://wangx733.github.io/jogano/1-products/49-bel.png" class="image" >
-<h1>Chateau Bel Air </h1>
+<h1>伯爱古堡奥迪金标干红</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/13.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/13.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 209</div>
 <img src="https://wangx733.github.io/jogano/1-products/13-barrabaque.png" class="image" >
-<h1>Chateau Barrabaque </h1>
+<h1>芭芭拉古堡干红 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/14.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/14.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 299</div>
 <img src="https://wangx733.github.io/jogano/1-products/14-badon.png" class="image" >
-<h1>Chateau  Bardon la Garelle  </h1>
+<h1>巴顿嘉乐 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/18.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/18.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
   <div class="redwine"></div>
 <div class="pricee">¥ 138</div>
 <img src="https://wangx733.github.io/jogano/1-products/18-peyruchet16.png" class="image" >
-<h1>hateau Peyruchet </h1>
+<h1>贝露雪干白</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="white" data-filter-price="p0">
-  <div class="redwine"></div>
-<div class="pricee">¥ 218</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
-<h1>Ch. Beauregard Ducasse blanc2011 </h1>
-<div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
-</div>
-</a>
-<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
-<h1>Chateau Beauregard Ducasse2010 </h1>
+<h1>杜卡斯白2011 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">12.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
+  <div class="redwine"></div>
+<div class="pricee">¥ 218</div>
+<img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
+<h1>杜卡斯红2010 </h1>
+<div class="introo">
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
+</div>
+</a>
+<a href="https://wangx733.github.io/jogano/product/47.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 208</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
-<h1>Chateau Jalousie </h1>
+<img src="https://wangx733.github.io/jogano/1-products/47-jalousie.png" class="image" >
+<h1>杰龙古堡干红</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/24.html" class="items" data-filter-key="red" data-filter-price="p350"> 
+<a href="https://wangx733.github.io/jogano/product/24.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full"> 
   <div class="redwine"></div>
 <div class="pricee">¥ 450</div>
 <img src="https://wangx733.github.io/jogano/1-products/24-canteloup.png" class="image" >
-<h1>Chateau Couhins </h1>
+<h1>康龙堡干红</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/22.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/22.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 228</div>
 <img src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png" class="image" >
-<h1>Chateau Semonlon </h1>
+<h1>赛梦龙</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/21.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/21.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 189</div>
 <img src="https://wangx733.github.io/jogano/1-products/21-Croix12.png" class="image" >
-<h1>Chateau La Croix Calendreau </h1>
+<h1>十字凯伦</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">14.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/23.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/23.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
   <div class="redwine"></div>
 <div class="pricee">¥ 109</div>
 <img src="https://wangx733.github.io/jogano/1-products/23-luchey.png" class="image" >
-<h1>Chateau Tour de Luchey </h1>
+<h1>桃露雪</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/31.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/31.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 680</div>
 <img src="https://wangx733.github.io/jogano/1-products/31-meursault-b.png" class="image" >
-<h1>Sylvain LoichetMeusault </h1>
+<h1>摩硕干白</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>霞多丽</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
-<div class="pricee">¥ 399</div>
+<div class="pricee">¥ 388</div>
 <img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
-<h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
+<h1>安妙古堡茂圣丹干红</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>黑皮诺</h3>
+  <h3>勃艮第</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red">
+<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 595</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
-<h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
+<img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
+<h1>安妙古堡茂圣丹一级干红</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">14.0%</h3>
+  <h3>多种葡萄</h3>
+  <h3>波尔多</h3>
 </div>
 </a>
 
 
-<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red">
+<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 448</div>
 <img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
-<h1>Sylvain Loichet Saint-Aubin 1er Cru </h1>
+<h1>圣澳干白</h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>多种葡萄</h3>
+  <h3>勃艮第</h3>
 </div>
 </a>
 
