--- a/product/24.html
+++ b/product/24.html
@@ -48,7 +48,7 @@
 <a href="https://wangx733.github.io/jogano/product.html" class="backk" >&#8592; </a>
 
 <div class="dis-price">￥450</div>
-<div class="dis-p-name">Pessac-Léognan white
+<div class="dis-p-name">Chateau Couhins
 
 <div class="dis-alchol">13.0%</div>
 </div>
