--- a/products.html
+++ b/products.html
@@ -216,7 +216,7 @@
 
 
 
-<a data-filter-key="white" href="https://wangx733.github.io/jogano/product/1.html" class="items red" data-filter-key="red" data-filter-price="p0">
+<a data-filter-key="white" href="https://wangx733.github.io/jogano/product/1.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
 <div class="redwine"></div>
 <div class="pricee">¥ 99</div>
 <img src="https://wangx733.github.io/jogano/1-products/1-bachevillain.png" class="image" >
@@ -230,13 +230,13 @@
 
 
 
-<a href="https://wangx733.github.io/jogano/product/2.html" class="items red" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/2.html" class="items red" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
 <div class="redwine"></div>
 <div class="pricee">¥ 88</div>
 <img src="https://wangx733.github.io/jogano/1-products/2-lostpara.png" class="image" >
 <h1>Lost Paradise </h1>
 <div class="introo">
-  <h3>13.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
@@ -244,252 +244,252 @@
 
 
 
-<a href="https://wangx733.github.io/jogano/product/4.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/4.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full">
   <div class="redwine"></div>
 <div class="pricee">¥ 358</div>
 <img src="https://wangx733.github.io/jogano/1-products/4-pomerol07.png" class="image" >
 <h1>Chateau Du Tailhas  </h1>
 <div class="introo">
-  <h3>13.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/7.html" class="items" data-filter-key="white" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/7.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="loire" >
   <div class="redwine"></div>
 <div class="pricee">¥ 256</div>
 <img src="https://wangx733.github.io/jogano/1-products/7-cuveeflamme.png" class="image" >
 <h1>Cuvée Flamme Brut  </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">14.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/8.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/8.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="loire">
   <div class="redwine"></div>
 <div class="pricee">¥ 256</div>
 <img src="https://wangx733.github.io/jogano/1-products/8-flamme-rose.png" class="image" >
 <h1>Cuvée Flamme Rosé  </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">12.0%</h3>
   <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3>Loire valley</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/9.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/9.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="cahors" data-filter-body="full">
   <div class="redwine"></div>
 <div class="pricee">¥ 369</div>
 <img src="https://wangx733.github.io/jogano/1-products/9-haute.png" class="image" >
 <h1>CCH. DE Haut Serre  </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3>Cahors</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/10.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/10.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 208</div>
 <img src="https://wangx733.github.io/jogano/1-products/10-gouleyant.png" class="image" >
 <h1>Ch.Gouleyant  </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3>Cahors</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/11.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/11.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="cahors" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 288</div>
 <img src="https://wangx733.github.io/jogano/1-products/11-laffeur.png" class="image" >
 <h1>Ch.Lafleaur Haut Serre </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3>Cahors</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/49.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 246</div>
 <img src="https://wangx733.github.io/jogano/1-products/49-bel.png" class="image" >
 <h1>Chateau Bel Air </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/13.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/13.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 209</div>
 <img src="https://wangx733.github.io/jogano/1-products/13-barrabaque.png" class="image" >
 <h1>Chateau Barrabaque </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/14.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/14.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 299</div>
 <img src="https://wangx733.github.io/jogano/1-products/14-badon.png" class="image" >
 <h1>Chateau  Bardon la Garelle  </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/18.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/18.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
   <div class="redwine"></div>
 <div class="pricee">¥ 138</div>
 <img src="https://wangx733.github.io/jogano/1-products/18-peyruchet16.png" class="image" >
 <h1>hateau Peyruchet </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="white" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="white" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 218</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
 <h1>Ch. Beauregard Ducasse blanc2011 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">12.5%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/20.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 218</div>
 <img src="https://wangx733.github.io/jogano/1-products/20-ducasse.png" class="image" >
 <h1>Chateau Beauregard Ducasse2010 </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/47.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 208</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<img src="https://wangx733.github.io/jogano/1-products/47-jalousie.png" class="image" >
 <h1>Chateau Jalousie </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/24.html" class="items" data-filter-key="red" data-filter-price="p350"> 
+<a href="https://wangx733.github.io/jogano/product/24.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="bordeaux" data-filter-body="full"> 
   <div class="redwine"></div>
 <div class="pricee">¥ 450</div>
 <img src="https://wangx733.github.io/jogano/1-products/24-canteloup.png" class="image" >
-<h1>Chateau Couhins </h1>
+<h1>Canteloup </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/22.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/22.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 228</div>
 <img src="https://wangx733.github.io/jogano/1-products/22-semonlon15.png" class="image" >
 <h1>Chateau Semonlon </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/21.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/21.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 189</div>
 <img src="https://wangx733.github.io/jogano/1-products/21-Croix12.png" class="image" >
-<h1>Chateau La Croix Calendreau </h1>
+<h1>Chateau La Coix Calendreau </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">14.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
-<a href="https://wangx733.github.io/jogano/product/23.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/23.html" class="items" data-filter-key="red" data-filter-price="p0" data-filter-region="bordeaux" data-filter-body="light">
   <div class="redwine"></div>
 <div class="pricee">¥ 109</div>
 <img src="https://wangx733.github.io/jogano/1-products/23-luchey.png" class="image" >
 <h1>Chateau Tour de Luchey </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/31.html" class="items" data-filter-key="red" data-filter-price="p350">
+<a href="https://wangx733.github.io/jogano/product/31.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 680</div>
 <img src="https://wangx733.github.io/jogano/1-products/31-meursault-b.png" class="image" >
-<h1>Sylvain LoichetMeusault </h1>
+r<h1>Sylvain LoichetMeusault </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>Chardonny</h3>
+  <h3>Burgendy</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p0">
+<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 399</div>
 <img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
 <h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
 <div class="introo">
-  <h3>14.0%</h3>
-  <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3 class="lato">13.5%</h3>
+  <h3>Pinot Noir</h3>
+  <h3>Burgendy</h3>
 </div>
 </a>
 
-<a href="https://wangx733.github.io/jogano/product/.html" class="items" data-filter-key="red">
+<a href="https://wangx733.github.io/jogano/product/29.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 595</div>
-<img src="https://wangx733.github.io/jogano/1-products/.png" class="image" >
+<img src="https://wangx733.github.io/jogano/1-products/29-morey10.png" class="image" >
 <h1>Domaine Pierre Amiot et fils Morey Saint Denis </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">14.0%</h3>
   <h3>Blend</h3>
   <h3>Bordeaux</h3>
 </div>
 </a>
 
 
-<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red">
+<a href="https://wangx733.github.io/jogano/product/30.html" class="items" data-filter-key="red" data-filter-price="p350" data-filter-region="burgendy" data-filter-body="medium">
   <div class="redwine"></div>
 <div class="pricee">¥ 448</div>
 <img src="https://wangx733.github.io/jogano/1-products/30-asint-aubin.png" class="image" >
 <h1>Sylvain Loichet Saint-Aubin 1er Cru </h1>
 <div class="introo">
-  <h3>14.0%</h3>
+  <h3 class="lato">13.5%</h3>
   <h3>Blend</h3>
-  <h3>Bordeaux</h3>
+  <h3>Burgendy</h3>
 </div>
 </a>
 
